--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>To a car I once had</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon-32x32.png" type="image/x-icon" />
-    />
   </head>
   <body>
     <header>
@@ -20,14 +19,14 @@
       <div class="section">
         <img
           src="First image (daisy).JPG"
-          alt="First picture and first fillup for her!"
-          title="First picture and first fillup for her!"
+          alt="First picture and first fill-up for her!"
+          title="First picture and first fill-up for her!"
           class="resize-image"
         />
         <p>
-          This was the first photo I ever took of Daisy. I had a freind drive it
-          to the gas station due to my lack of a license, also a memory I had
-          was only spending 40 bucks to fill up lol!
+          This was the first photo I ever took of Daisy. I had a friend drive it
+          to the gas station due to my lack of a license. Also, I remember only
+          spending 40 bucks to fill up—such a memory!
         </p>
       </div>
 
@@ -35,16 +34,58 @@
         <img
           src="new wheels! (dmp).JPG"
           alt="First big purchase for the Z s/o to offer up"
-          title="Best 1200 spent at the time."
+          title="Best $1200 spent at the time."
           class="resize-image"
         />
-
         <p>
           This is when I installed my favorite set of wheels. Daisy was more
           than just a car to me.
         </p>
       </div>
+
+      <!-- New Section 3 -->
+      <div class="section">
+        <img
+          src="first time to the coast.JPG"
+          alt="Drove on the PCH for a few hours and finally stopped."
+          title="That side profile view."
+          class="resize-image"
+        />
+        <p>
+          My first real road trip with her—I remember being so happy; I didn't
+          mind filling up twice.
+        </p>
+      </div>
+
+      <!-- New Section 4 -->
+      <div class="section">
+        <img
+          src="exhaust tip.JPG"
+          alt="I wanted a loud car"
+          title="Exhaust tip"
+          class="resize-image"
+        />
+        <p>
+          Exhaust, exhaust! I remember wanting a loud car so badly, but I didn’t
+          want it to be annoyingly loud, so I spent the extra coin.
+        </p>
+      </div>
+
+      <!-- New Section 5 -->
+      <div class="section">
+        <img
+          src="one of my fave pics.JPG"
+          alt="Up in La Habra"
+          title="One of the last few aesthetic pics of little Daisy"
+          class="resize-image"
+        />
+        <p>
+          I purchased a fancy camera to get better pics of her, but sadly didn’t
+          get too many before the accident.
+        </p>
+      </div>
     </div>
+
     <div class="youtube-embed">
       <iframe
         width="320"
@@ -57,12 +98,25 @@
 
       <div class="youtube-description">
         <p>
-          My Absolute favorite song to listen too while driving her! (join me
-          for a ride press play for the whole experiance)
+          My absolute favorite song to listen to while driving her! (Join me for
+          a ride—press play for the whole experience.)
         </p>
         <a href="https://www.youtube.com/embed/hq0rZ3IiyWw" target="_blank"
           >Watch on YouTube</a
         >
+      </div>
+    </div>
+
+    <div class="qa-section">
+      <button class="qa-button">
+        Want to know more about how the accident happened? (Click here)
+      </button>
+      <div class="qa-content">
+        <p>
+          The accident occurred on a rainy evening when I lost control of the
+          car. Despite trying to regain control, I ended up sliding off the
+          road...
+        </p>
       </div>
     </div>
 
@@ -71,3 +125,4 @@
     </footer>
   </body>
 </html>
+
