--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
           <div class="qa-item">
             <p><strong>Q5: Where is she now?</strong></p>
             <p>
-              A5: "It ended up being a total loss, sadly, and I was cashed out
+              A5: It ended up being a total loss, sadly, and I was cashed out
               for the estimated value of the car. They let me keep her, but I
               just didn’t really have the time nor the financial resources to
-              fix her, so I sold her to a young man that did."
+              fix her, so I sold her to a young man that did.
             </p>
           </div>
         </div>
